--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.google.firebase:firebase-database:9.8.0'
     testCompile 'junit:junit:4.12'
 }
+
+// ADD THIS AT THE BOTTOM
+apply plugin: 'com.google.gms.google-services'
