--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.koen.snow">
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +21,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".Spots_activity" />
-        <activity android:name=".Snowheight_activity"></activity>
+        <activity android:name=".Predictions_activity" />
+        <activity android:name=".Main2Activity" />
+        <activity android:name=".Sign_in_Activity"></activity>
     </application>
 
 </manifest>
