--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Sign_in_Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".MainActivity"/>
         <activity android:name=".Spots_activity" />
-        <activity android:name=".Predictions_activity" />
-        <activity android:name=".Main2Activity" />
-        <activity android:name=".Sign_in_Activity"></activity>
+        <activity android:name=".Predictions_activity"></activity>
     </application>
 
 </manifest>
